--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ function getNextColor() {
         "Census_Bern_Summarizefunds.geojson",
         "Census_Bern_demographics.geojson",
         "Census_publicArtDeserts.geojson",
+ 	"cleaned_Census_publicArtDeserts.geojson",
+ 	"GradientArtDesert_Clip.geojson",
         "Censustracts_80AMI_andbelow_ExportFeatures.geojson",
         "Censustracts_80AMI_andbelow_lowtonoartwork.geojson",
         "CitiesCommunities_ExportFeatures.geojson",
@@ -228,6 +230,8 @@ const prettyNames = {
   "Census_Bern_Summarizefunds.geojson": "Census Tracts: Summarized Funds",
   "Census_Bern_demographics.geojson": "Census Tracts: Demographics",
   "Census_publicArtDeserts.geojson": "Public Art Deserts",
+  "cleaned_Census_publicArtDeserts.geojson": "Art Deserts -exclude special zones",
+  "GradientArtDesert_Clip.geojson": "Gradient Art Desert - exclude special zones",
   "Censustracts_80AMI_andbelow_ExportFeatures.geojson": "Census Tracts ≤ 80% AMI",
   "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts",
   "CitiesCommunities_ExportFeatures.geojson": "Cities and Communities",
