--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@ function getNextColor() {
         "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson",
         "cleaned_AllSpecialZones_iselta_library.geojson",
         "cleaned_AllSpecialZones_iseltapolice.geojson",
-        "ArtworkwithArtistSignatureonly.geojson",
         "CanvassedArtwork_1mile_hospitals.geojson",
         "CanvassedArtwork_480within1mileforest.geojson",
         "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson",
@@ -179,7 +178,6 @@ function getNextColor() {
         "CountyCity_Identifier_Citystats.geojson",
         "CountyCity_Identifier_Citystats_countystats_All.geojson",
         "CountyCity_ethnicity_sub.geojson",
-        "CountyPublicFund_ALLMEDIANzip_district.geojson",
         "County_only.geojson",
         "Countycity_publicFunds_Merge.geojson",
         "EJSCREEN_StateP_PairwiseClip.geojson",
@@ -203,60 +201,58 @@ function getNextColor() {
 	
 	
 const prettyNames = {
-  "canvassed_art_points.geojson": "_Canvassed Art Points",
+  "canvassed_art_points.geojson": "Points of All Canvassed Art in Public Across Bernalillo County",
    "cleaned_NM_CensusTracts2020__Project.geojson": "Census Tracts 2020",
    "cleaned_Tohajiilee_artwork_specialpoints.geojson": "To'hajiilee art points",
   "CountyBoundary.geojson": "Bernalillo County boundary",
-  "CountyCommissionDistricts.geojson": "County Districts",
+  "CountyCommissionDistricts.geojson": "County Districts Boundaries",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
-  "cleaned_AllSpecialZones_Isleta.geojson": "Isleta points",
+  "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Art Points",
   "cleaned_AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
   "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson": "To’Hajiilee Tribal Zones",
   "cleaned_AllSpecialZones_iselta_library.geojson": "Isleta Library",
   "cleaned_AllSpecialZones_iseltapolice.geojson": "Isleta Police Station",
-  "ArtworkwithArtistSignatureonly.geojson": "Artworks with Artist Signatures",
-  "CanvassedArtwork_1mile_hospitals.geojson": "Art Within 1 Mile of Hospitals",
-  "CanvassedArtwork_480within1mileforest.geojson": "Art Points Near Forests",
-  "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson": "Art Within 1 Mile of Open Space (No City Parks)",
-  "CanvassedArtwork_ExportFeatures1milepolice.geojson": "Art Within 1 Mile of Police",
-  "CanvassedArtwork_K12_anduni.geojson": "Art Near Schools & Universities",
-  "university_college_1mileart.geojson": "University/College 1 mile from art",
-  "CanvassedArtwork_MultipleRingBuffer1.geojson": "Art: Multiple Ring Buffers",
-  "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson": "Swanson Art in BernCo Parks",
+  "CanvassedArtwork_1mile_hospitals.geojson": "Art within 1 Mile of Hospitals",
+  "CanvassedArtwork_480within1mileforest.geojson": "Art Points within 1 mile of Forests",
+  "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson": "Art within 1 Mile of Open Space (No City Parks)",
+  "CanvassedArtwork_ExportFeatures1milepolice.geojson": "Art within 1 mile of Police Station",
+  "CanvassedArtwork_K12_anduni.geojson": "Art within 1 mile of Schools & Universities",
+  "university_college_1mileart.geojson": "Art within 1 mile of University/College",
+  "CanvassedArtwork_MultipleRingBuffer1.geojson": "Distance to nearest Artwork in Miles",
+  "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson": "Art within 1 mile of BernCo Parks",
   "CanvassedArtwork_swanson_partnermanagedspace.geojson": "Swanson Art in Partner-Managed Spaces",
-  "Census_Bern_Summarizefunds.geojson": "Census Tracts: Summarized Funds",
+  "Census_Bern_Summarizefunds.geojson": "Art Investments by Census Tracts",
   "Census_Bern_demographics.geojson": "Census Tracts: Demographics",
-  "Census_publicArtDeserts.geojson": "Public Art Deserts",
+  "Census_publicArtDeserts.geojson": "Public Art Deserts Type 1= Census Tracts without Artwork",
   "Censustracts_80AMI_andbelow_ExportFeatures.geojson": "Census Tracts ≤ 80% AMI",
   "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts",
-  "CitiesCommunities_ExportFeatures.geojson": "Cities and Communities",
-  "cleaned_CityParks_PairwiseClip.geojson": "City Parks (Clipped)",
+  "CitiesCommunities_ExportFeatures.geojson": "County, City, and Community Boundaries",
+  "cleaned_CityParks_PairwiseClip.geojson": "Parks within Albuquerque",
   "City_only.geojson": "Within City Areas",
-  "City_only_points.geojson": "City Points",
-  "CountyCity_ArtistSigsonly.geojson": "County + City: Artist Signatures Only",
-  "CountyCity_Identifier_Citystats.geojson": "Canvassed short summary",
+  "City_only_points.geojson": "Albuquerque Art Points",
+  "CountyCity_ArtistSigsonly.geojson": "Artworks with Artist Signatures",
+  "CountyCity_Identifier_Citystats.geojson": "All Canvassed Artworks",
   "CountyCity_Identifier_Citystats_countystats_All.geojson": "City + County Statistics (All)",
   "CountyCity_ethnicity_sub.geojson": "Canvassed Ethnicity and Zipcode",
-  "CountyPublicFund_ALLMEDIANzip_district.geojson": "Public Funds by ZIP Code District",
-  "County_only.geojson": "County points only",
-  "Countycity_publicFunds_Merge.geojson": "Merged Public Funding (City + County)",
+  "County_only.geojson": "County Art Points",
+  "Countycity_publicFunds_Merge.geojson": "Location of EPA Air Quality Monitors",
   "EJSCREEN_StateP_PairwiseClip.geojson": "EJSCREEN Indicators (Clipped)",
   "EPA_Air_Monitors.geojson": "EPA Air Quality Monitors",
-  "cleaned_Isleta_Artwork_specialpoints.geojson": "Isleta: Special Art Points",
-  "KnownCity.geojson": "Known City Boundaries",
-  "KnownCounty.geojson": "Known County Boundaries",
-  "KnownInventory.geojson": "Known Art Inventory",
+  "cleaned_Isleta_Artwork_specialpoints.geojson": "Isleta Art Points",
+  "KnownCity.geojson": "Known City of Albuquerque Art Points",
+  "KnownCounty.geojson": "Known Bernalillo County Art Points",
+  "KnownInventory.geojson": "Known City & County Inventory Combined",
   "cleaned_.geojson": "NM Census Tracts (2020)",
-  "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020 Exported)",
-  "NineLandGrant_Merge.geojson": "Land Grants",
-  "OpenSpace_PairwiseClip.geojson": "Open Space",
+  "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020)",
+  "NineLandGrant_Merge.geojson": "Land Grant Boundaries",
+  "OpenSpace_PairwiseClip.geojson": "Open Space Boundaries",
   "Tohajiilee_artwork_specialpoints.geojson": "To’Hajiilee Special Art Points",
   "TrainStops_ExportFeatures.geojson": "Train Stops",
   "Walkability_Bern_ARTJOIN.geojson": "Walkability + Art Density (Bernalillo)",
   "cleaned_WalkabilityandArtDensity_highwalkart.geojson": "High Walkability + Art Density",
   "cb_2020_35_joined.geojson": "Census Block (2020) New Mexico State",
-  "zipcodes__MODES.geojson": "ZIP Codes: Most Common Art Type"
+  "zipcodes__MODES.geojson": "Most Common Art Type within Each Zip Code"
 };
 
 
