--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ const prettyNames = {
   "CountyBoundary.geojson": "Bernalillo County boundary",
   "CountyCommissionDistricts.geojson": "County Districts Boundaries",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
+  "ABQ_Ride_bus_routes": "Bus routes",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
   "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Art Points",
   "cleaned_AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
