--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ function getNextColor() {
         "Walkability_Bern_ARTJOIN.geojson",
         "cleaned_WalkabilityandArtDensity_highwalkart.geojson",
         "cb_2020_35_joined.geojson",
+	"ABQ_Ride_bus_routes.geojson",
         "zipcodes__MODES.geojson"
     ];
 	
@@ -206,7 +207,7 @@ const prettyNames = {
   "CountyBoundary.geojson": "Bernalillo County boundary",
   "CountyCommissionDistricts.geojson": "County Districts Boundaries",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
-  "ABQ_Ride_bus_routes": "Bus routes",
+  "ABQ_Ride_bus_routes.geojson": "Bus routes",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
   "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Art Points",
   "cleaned_AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
