--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ function getNextColor() {
         "canvassed_art_points.geojson",
 		"CountyBoundary.geojson",
 		"CountyCommissionDistricts.geojson",
+	    "ABQ_Ride_bus_routes_EPSG4326.geojson",
         "cleaned_ABQ_points.geojson",
         "cleaned_AllSpecialZones_Chililigrant.geojson",
         "cleaned_AllSpecialZones_Isleta.geojson",
@@ -204,6 +205,7 @@ const prettyNames = {
   "canvassed_art_points.geojson": "Points of All Canvassed Art in Public Across Bernalillo County",
    "cleaned_NM_CensusTracts2020__Project.geojson": "Census Tracts 2020",
    "cleaned_Tohajiilee_artwork_specialpoints.geojson": "To'hajiilee art points",
+"ABQ_Ride_bus_routes_EPSG4326.geojson": "Bus Routes",
   "CountyBoundary.geojson": "Bernalillo County boundary",
   "CountyCommissionDistricts.geojson": "County Districts Boundaries",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
