--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@ function getNextColor() {
         "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson",
         "NineLandGrant_Merge.geojson",
         "OpenSpace_PairwiseClip.geojson",
-        "cleaned_Tohajiilee_artwork_specialpoints.geojson",
         "TrainStops_ExportFeatures.geojson",
         "Walkability_Bern_ARTJOIN.geojson",
         "cleaned_WalkabilityandArtDensity_highwalkart.geojson",
@@ -201,13 +200,12 @@ function getNextColor() {
 const prettyNames = {
   "canvassed_art_points.geojson": "Points of All Canvassed Art in Public Across Bernalillo County",
    "cleaned_NM_CensusTracts2020__Project.geojson": "Census Tracts 2020",
-   "cleaned_Tohajiilee_artwork_specialpoints.geojson": "To'hajiilee art points",
 "ABQ_Ride_bus_routes_EPSG4326.geojson": "Bus Routes",
   "CountyBoundary.geojson": "Bernalillo County boundary",
   "CountyCommissionDistricts.geojson": "County Districts Boundaries",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
-  "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson": "To’Hajiilee Tribal Zones",
+  "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson": "To’Hajiilee Art Points",
   "cleaned_AllSpecialZones_iselta_library.geojson": "Isleta Library",
   "cleaned_AllSpecialZones_iseltapolice.geojson": "Isleta Police Station",
   "CanvassedArtwork_1mile_hospitals.geojson": "Art within 1 Mile of Hospitals",
@@ -242,7 +240,6 @@ const prettyNames = {
   "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020)",
   "NineLandGrant_Merge.geojson": "Land Grant Boundaries",
   "OpenSpace_PairwiseClip.geojson": "Open Space Boundaries",
-  "Tohajiilee_artwork_specialpoints.geojson": "To’Hajiilee Special Art Points",
   "TrainStops_ExportFeatures.geojson": "Train Stops",
   "Walkability_Bern_ARTJOIN.geojson": "Walkability + Art Density (Bernalillo)",
   "cleaned_WalkabilityandArtDensity_highwalkart.geojson": "High Walkability + Art Density",
