--- a/index.html
+++ b/index.html
@@ -192,14 +192,13 @@ const prettyNames = {
   "CanvassedArtwork_ExportFeatures1milepolice.geojson": "Art within 1 mile of Police Station",
   "CanvassedArtwork_K12_anduni.geojson": "Art within 1 mile of Schools & Universities",
   "university_college_1mileart.geojson": "Art within 1 mile of University/College",
-  "CanvassedArtwork_MultipleRingBuffer1.geojson": "Distance to nearest Artwork in Miles",
+  "CanvassedArtwork_MultipleRingBuffer1.geojson": "Type 2: Areas 1 mile from nearest artwork",
   "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson": "Art within 1 mile of BernCo Parks",
   "CanvassedArtwork_swanson_partnermanagedspace.geojson": "Swanson Art in Partner-Managed Spaces",
   "Census_Bern_Summarizefunds.geojson": "Art Investments by Census Tracts",
   "Census_Bern_demographics.geojson": "Census Tracts: Demographics",
-  "Census_publicArtDeserts.geojson": "Public Art Deserts Type 1= Census Tracts without Artwork",
-  "Censustracts_80AMI_andbelow_ExportFeatures.geojson": "Census Tracts ≤ 80% AMI",
-  "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts",
+  "Census_publicArtDeserts.geojson": "Type 1: Census Tracts without Artwork",
+  "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Type 3: Low to No Artwork (SES) 80% AMI",
   "CitiesCommunities_ExportFeatures.geojson": "County, City, and Community Boundaries",
   "cleaned_CityParks_PairwiseClip.geojson": "Parks within Albuquerque",
   "City_only.geojson": "Within City Areas",
@@ -272,7 +271,6 @@ const layerGroups = {
     "university_college_1mileart.geojson": "Art within 1 mile of University/College",
     "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson": "Art within 1 mile of BernCo Parks",
     "CanvassedArtwork_swanson_partnermanagedspace.geojson": "Swanson Art in Partner-Managed Spaces",
-    "CanvassedArtwork_MultipleRingBuffer1.geojson": "Distance to nearest Artwork in Miles"
   },
 
   "Environmental & EJ": {
@@ -296,9 +294,9 @@ const layerGroups = {
   },
 
   "Public Art Deserts": {
-    "Census_publicArtDeserts.geojson": "Public Art Deserts Type 1= Census Tracts without Artwork",
-    "Censustracts_80AMI_andbelow_ExportFeatures.geojson": "Census Tracts ≤ 80% AMI",
-    "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts"
+    "Census_publicArtDeserts.geojson": "Type 1: Census Tracts without Artwork",
+    "CanvassedArtwork_MultipleRingBuffer1.geojson": "Type 2: Areas 1 mile from nearest artwork",
+    "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Type 3: Low to No Artwork (SES) 80% AMI "
   }
 };
     // Render grouped layers
